--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,19 +1,19 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 
 buildscript {
     ext.kotlin_version = '1.3.72'
     repositories {
 
-        maven{url 'http://maven.aliyun.com/nexus/content/groups/public/'}
+        maven{url 'https://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
         google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
