--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,14 +46,13 @@ configurations.all {
 }
 
 dependencies {
-//    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.alibaba:fastjson:1.2.83'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.facebook.react:react-native:+'
-    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.14.9'
 
     // The latest stable App SDK for Android.
-    implementation 'com.facebook.soloader:soloader:0.10.4+'
+    implementation 'com.squareup.okhttp3:okhttp-urlconnection:4.11.0'
+    implementation 'com.facebook.soloader:soloader:0.10.5'
     implementation 'com.thingclips.smart:thingsmart:5.1.0'
 }
 repositories {
