--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "build": "tsdx build",
     "test": "tsdx test",
     "lint": "tsdx lint",
-    "prepare": "tsdx build"
+    "prepare": "tsdx build",
+    "postinstall": "tsdx build"
   },
   "peerDependencies": {
     "react-native": ">=0.70.5"
